--- a/taiwan.html
+++ b/taiwan.html
@@ -30,19 +30,15 @@
 
     .info-panel { background: linear-gradient(135deg, #fef3c7, #fde68a); }
 
-    /* ✅ 原本的白點拿掉：改成透明「點擊區」(仍保留座標與可點擊) */
-    .dot-hit {
-      width: 18px;
-      height: 18px;
+    /* 地圖白點 */
+    .dot-target {
+      width: 14px;
+      height: 14px;
       border-radius: 9999px;
-      background: transparent;
-      border: none;
-      box-shadow: none;
-      pointer-events: auto;
-      transform: translate(-50%, -50%);
-    }
-    .dot-hit.matched {
-      cursor: pointer;
+      background: white;
+      border: 2px solid rgba(51,65,85,0.75);
+      box-shadow: 0 2px 8px rgba(0,0,0,0.18);
+      transition: transform 0.12s ease, box-shadow 0.12s ease, background 0.12s ease;
     }
 
     /* 左側方框 */
@@ -126,7 +122,7 @@
         </div>
 
         <p class="text-xs text-slate-500 mt-2 text-center">
-          方框為配對目標（拖到方框）；配對完成後可點擊方框或箭頭終點位置查看特色。
+          方框為配對目標（拖到方框）；配對完成後可點擊方框或白點查看特色。
         </p>
       </div>
 
@@ -156,7 +152,7 @@
           <div id="info-content" class="text-center">
             <div class="text-6xl mb-3">🚉</div>
             <p class="text-lg text-amber-800 font-medium">
-              點擊已配對的方框或箭頭終點位置<br>來看看當地的特色吧！
+              點擊已配對的方框或白點<br>來看看當地的特色吧！
             </p>
           </div>
         </div>
@@ -216,8 +212,8 @@
           <line x1="30" y1="52" x2="20" y2="52" stroke="#333" stroke-width="1"/>
           <line x1="70" y1="48" x2="80" y2="45" stroke="#333" stroke-width="1"/>
           <line x1="70" y1="52" x2="80" y2="52" stroke="#333" stroke-width="1"/>
-          <ellipse cx="35" cy="70" rx="8" ry="6" fill="#FFA07A"/>
-          <ellipse cx="65" cy="70" rx="8" ry="6" fill="#FFA07A"/>
+          <ellipse cx="35" y="70" rx="8" ry="6" fill="#FFA07A"/>
+          <ellipse cx="65" y="70" rx="8" ry="6" fill="#FFA07A"/>
           <path d="M75,65 Q85,55 80,75" stroke="#FFA07A" stroke-width="8" fill="none" stroke-linecap="round"/>
         </svg>` },
       { id: 'sandiaoling', name: '三貂嶺', description: '三貂嶺是一個秘境車站，附近有美麗的瀑布和原始的自然風光，是探險的好地方！',
@@ -248,8 +244,8 @@
           <line x1="30" y1="55" x2="30" y2="75" stroke="#228B22" stroke-width="3"/>
           <line x1="70" y1="47" x2="70" y2="70" stroke="#228B22" stroke-width="3"/>
           <line x1="50" y="60" x2="50" y2="78" stroke="#228B22" stroke-width="3"/>
-          <ellipse cx="25" cy="75" rx="8" ry="3" fill="#32CD32"/>
-          <ellipse cx="55" cy="78" rx="6" ry="2" fill="#32CD32"/>
+          <ellipse cx="25" y="75" rx="8" ry="3" fill="#32CD32"/>
+          <ellipse cx="55" y="78" rx="6" ry="2" fill="#32CD32"/>
           <circle cx="85" cy="20" r="12" fill="#FFD700"/>
         </svg>` },
       { id: 'shuangxi', name: '雙溪', description: '雙溪有古老的房屋和清澈的溪流，走在老街上可以感受到濃濃的懷舊氣息！',
@@ -264,8 +260,8 @@
           <rect x="78" y="48" width="6" height="6" fill="#87CEEB"/>
           <path d="M0,85 Q25,75 50,85 Q75,95 100,85" fill="#87CEEB"/>
           <path d="M0,88 Q25,78 50,88 Q75,98 100,88" fill="#B0E0E6"/>
-          <ellipse cx="30" cy="83" rx="4" ry="2" fill="#4682B4"/>
-          <ellipse cx="70" cy="87" rx="3" ry="1.5" fill="#4682B4"/>
+          <ellipse cx="30" y="83" rx="4" ry="2" fill="#4682B4"/>
+          <ellipse cx="70" y="87" rx="3" ry="1.5" fill="#4682B4"/>
         </svg>` },
       { id: 'gongliao', name: '貢寮', description: '貢寮靠近東北角海岸，這裡有山海景色和寧靜的聚落氛圍，也很適合安排輕旅行！',
         svg: `<svg viewBox="0 0 100 100" class="w-full h-full">
@@ -286,7 +282,7 @@
           <rect x="35" y="45" width="3" height="30" fill="#8B4513"/>
           <polygon points="38,30 38,55 55,42" fill="#FF6347"/>
           <ellipse cx="20" cy="75" rx="8" ry="4" fill="#FFE4B5"/>
-          <ellipse cx="75" cy="80" rx="6" ry="3" fill="#FFE4B5"/>
+          <ellipse cx="75" y="80" rx="6" ry="3" fill="#FFE4B5"/>
           <path d="M5,55 Q10,52 15,55 Q20,58 25,55" stroke="#4682B4" stroke-width="2" fill="none"/>
           <path d="M60,52 Q65,49 70,52 Q75,55 80,52" stroke="#4682B4" stroke-width="2" fill="none"/>
           <text x="50" y="90" text-anchor="middle" fill="#8B4513" font-size="8">🎵🎶</text>
@@ -397,26 +393,24 @@
         const pos = stationPositions[station.id];
         if (!pos) return;
 
-        // ✅ 透明點擊區（白點不顯示）
-        const hit = document.createElement('div');
-        hit.className = 'absolute dot-hit';
-        hit.dataset.stationId = station.id;
-        hit.style.left = pos.left + '%';
-        hit.style.top = pos.top + '%';
+        const dot = document.createElement('div');
+        dot.className = 'absolute dot-target';
+        dot.dataset.stationId = station.id;
+        dot.style.left = pos.left + '%';
+        dot.style.top = pos.top + '%';
+        dot.style.transform = 'translate(-50%, -50%)';
 
-        // 只有配對完成才可點（避免誤觸）
+        dot.title = isMatched ? `點擊查看：${station.name}` : `尚未配對：${station.name}`;
+        dot.addEventListener('click', () => {
+          if (matchedStations.has(station.id)) showStationInfo(station);
+        });
+
         if (isMatched) {
-          hit.classList.add('matched');
-          hit.title = `點擊查看：${station.name}`;
-          hit.addEventListener('click', () => showStationInfo(station));
-        } else {
-          hit.title = `尚未配對：${station.name}`;
-          hit.style.pointerEvents = 'none';
+          dot.style.background = 'linear-gradient(135deg, #4ade80, #22c55e)';
+          dot.style.border = '2px solid rgba(16,185,129,0.95)';
         }
+        dotLayer.appendChild(dot);
 
-        dotLayer.appendChild(hit);
-
-        // 左側方框
         const labelY = (n === 1) ? 50 : topY + (index * (bottomY - topY) / (n - 1));
 
         const label = document.createElement('div');
@@ -441,7 +435,6 @@
         }
         labelsLayer.appendChild(label);
 
-        // 箭頭連線：label -> stationPos（終點位置仍保留）
         const path = document.createElementNS('http://www.w3.org/2000/svg', 'path');
 
         const x1 = labelAnchorX;
@@ -620,7 +613,7 @@
       document.getElementById('info-content').innerHTML = `
         <div class="text-6xl mb-3">🚉</div>
         <p class="text-lg text-amber-800 font-medium">
-          點擊已配對的方框或箭頭終點位置<br>來看看當地的特色吧！
+          點擊已配對的方框或白點<br>來看看當地的特色吧！
         </p>
       `;
     }
