--- a/taiwan.html
+++ b/taiwan.html
@@ -30,17 +30,6 @@
 
     .info-panel { background: linear-gradient(135deg, #fef3c7, #fde68a); }
 
-    /* 地圖白點 */
-    .dot-target {
-      width: 14px;
-      height: 14px;
-      border-radius: 9999px;
-      background: white;
-      border: 2px solid rgba(51,65,85,0.75);
-      box-shadow: 0 2px 8px rgba(0,0,0,0.18);
-      transition: transform 0.12s ease, box-shadow 0.12s ease, background 0.12s ease;
-    }
-
     /* 左側方框 */
     .label-box {
       border-radius: 16px;
@@ -114,15 +103,17 @@
             </defs>
           </svg>
 
-          <div id="stations-container" class="absolute inset-0"></div>
+          <!-- ✅ 不再放白點（這層保留但會是空的） -->
+          <div id="stations-container" class="absolute inset-0 pointer-events-none"></div>
 
+          <!-- 左側方框 -->
           <div id="labels-container"
                class="absolute top-2 bottom-2 left-2 flex flex-col justify-between gap-2 w-[170px] pointer-events-auto">
           </div>
         </div>
 
         <p class="text-xs text-slate-500 mt-2 text-center">
-          方框為配對目標（拖到方框）；配對完成後可點擊方框或白點查看特色。
+          方框為配對目標（拖到方框）；配對完成後可點擊方框查看特色。
         </p>
       </div>
 
@@ -152,7 +143,7 @@
           <div id="info-content" class="text-center">
             <div class="text-6xl mb-3">🚉</div>
             <p class="text-lg text-amber-800 font-medium">
-              點擊已配對的方框或白點<br>來看看當地的特色吧！
+              點擊已配對的方框<br>來看看當地的特色吧！
             </p>
           </div>
         </div>
@@ -168,7 +159,10 @@
     };
 
     const stationsData = [
-      { id: 'songshan', name: '松山', description: '松山是台北重要的交通樞紐，這裡有熱鬧的饒河夜市，可以吃到各種美味的小吃喔！',
+      {
+        id: 'songshan',
+        name: '松山',
+        description: '松山是台北重要的交通樞紐，這裡有熱鬧的饒河夜市，可以吃到各種美味的小吃喔！',
         svg: `<svg viewBox="0 0 100 100" class="w-full h-full">
           <rect x="10" y="40" width="80" height="50" rx="5" fill="#FF6B6B"/>
           <rect x="15" y="45" width="15" height="20" rx="2" fill="#FFE66D"/>
@@ -180,8 +174,12 @@
           <text x="25" y="29" text-anchor="middle" fill="#FF6B6B" font-size="12">🍜</text>
           <circle cx="75" cy="25" r="12" fill="#6BCB77"/>
           <text x="75" y="29" text-anchor="middle" fill="white" font-size="12">🚃</text>
-        </svg>` },
-      { id: 'ruifang', name: '瑞芳', description: '瑞芳是通往九份山城的門戶，這裡曾經是採金礦的地方，有著豐富的礦業文化！',
+        </svg>`
+      },
+      {
+        id: 'ruifang',
+        name: '瑞芳',
+        description: '瑞芳是通往九份山城的門戶，這裡曾經是採金礦的地方，有著豐富的礦業文化！',
         svg: `<svg viewBox="0 0 100 100" class="w-full h-full">
           <polygon points="50,10 20,50 80,50" fill="#8B7355"/>
           <polygon points="50,25 30,50 70,50" fill="#A0522D"/>
@@ -193,8 +191,12 @@
           <rect x="30" y="80" width="40" height="8" rx="2" fill="#696969"/>
           <circle cx="38" cy="88" r="4" fill="#333"/>
           <circle cx="62" cy="88" r="4" fill="#333"/>
-        </svg>` },
-      { id: 'houtong', name: '猴硐', description: '猴硐是著名的貓村，有好多可愛的貓咪在車站附近散步，是貓咪愛好者的天堂！',
+        </svg>`
+      },
+      {
+        id: 'houtong',
+        name: '猴硐',
+        description: '猴硐是著名的貓村，有好多可愛的貓咪在車站附近散步，是貓咪愛好者的天堂！',
         svg: `<svg viewBox="0 0 100 100" class="w-full h-full">
           <ellipse cx="50" cy="65" rx="30" ry="25" fill="#FFA07A"/>
           <ellipse cx="50" cy="45" rx="20" ry="18" fill="#FFA07A"/>
@@ -212,11 +214,15 @@
           <line x1="30" y1="52" x2="20" y2="52" stroke="#333" stroke-width="1"/>
           <line x1="70" y1="48" x2="80" y2="45" stroke="#333" stroke-width="1"/>
           <line x1="70" y1="52" x2="80" y2="52" stroke="#333" stroke-width="1"/>
-          <ellipse cx="35" y="70" rx="8" ry="6" fill="#FFA07A"/>
-          <ellipse cx="65" y="70" rx="8" ry="6" fill="#FFA07A"/>
+          <ellipse cx="35" cy="70" rx="8" ry="6" fill="#FFA07A"/>
+          <ellipse cx="65" cy="70" rx="8" ry="6" fill="#FFA07A"/>
           <path d="M75,65 Q85,55 80,75" stroke="#FFA07A" stroke-width="8" fill="none" stroke-linecap="round"/>
-        </svg>` },
-      { id: 'sandiaoling', name: '三貂嶺', description: '三貂嶺是一個秘境車站，附近有美麗的瀑布和原始的自然風光，是探險的好地方！',
+        </svg>`
+      },
+      {
+        id: 'sandiaoling',
+        name: '三貂嶺',
+        description: '三貂嶺是一個秘境車站，附近有美麗的瀑布和原始的自然風光，是探險的好地方！',
         svg: `<svg viewBox="0 0 100 100" class="w-full h-full">
           <polygon points="20,90 35,40 50,90" fill="#228B22"/>
           <polygon points="50,90 65,30 80,90" fill="#2E8B57"/>
@@ -227,8 +233,12 @@
           <circle cx="20" cy="25" r="6" fill="white" opacity="0.8"/>
           <circle cx="28" cy="22" r="4" fill="white" opacity="0.8"/>
           <circle cx="15" cy="20" r="3" fill="white" opacity="0.8"/>
-        </svg>` },
-      { id: 'mudan', name: '牡丹', description: '牡丹是一個寧靜純樸的鄉村小站，周圍有美麗的田園風光和盛開的花朵！',
+        </svg>`
+      },
+      {
+        id: 'mudan',
+        name: '牡丹',
+        description: '牡丹是一個寧靜純樸的鄉村小站，周圍有美麗的田園風光和盛開的花朵！',
         svg: `<svg viewBox="0 0 100 100" class="w-full h-full">
           <rect x="0" y="60" width="100" height="40" fill="#90EE90"/>
           <rect x="0" y="70" width="100" height="30" fill="#7CFC00"/>
@@ -243,12 +253,16 @@
           <circle cx="50" cy="50" r="2" fill="#FFD700"/>
           <line x1="30" y1="55" x2="30" y2="75" stroke="#228B22" stroke-width="3"/>
           <line x1="70" y1="47" x2="70" y2="70" stroke="#228B22" stroke-width="3"/>
-          <line x1="50" y="60" x2="50" y2="78" stroke="#228B22" stroke-width="3"/>
-          <ellipse cx="25" y="75" rx="8" ry="3" fill="#32CD32"/>
-          <ellipse cx="55" y="78" rx="6" ry="2" fill="#32CD32"/>
+          <line x1="50" y1="60" x2="50" y2="78" stroke="#228B22" stroke-width="3"/>
+          <ellipse cx="25" cy="75" rx="8" ry="3" fill="#32CD32"/>
+          <ellipse cx="55" cy="78" rx="6" ry="2" fill="#32CD32"/>
           <circle cx="85" cy="20" r="12" fill="#FFD700"/>
-        </svg>` },
-      { id: 'shuangxi', name: '雙溪', description: '雙溪有古老的房屋和清澈的溪流，走在老街上可以感受到濃濃的懷舊氣息！',
+        </svg>`
+      },
+      {
+        id: 'shuangxi',
+        name: '雙溪',
+        description: '雙溪有古老的房屋和清澈的溪流，走在老街上可以感受到濃濃的懷舊氣息！',
         svg: `<svg viewBox="0 0 100 100" class="w-full h-full">
           <rect x="15" y="35" width="35" height="35" fill="#8B4513"/>
           <polygon points="15,35 32,15 50,35" fill="#A0522D"/>
@@ -260,10 +274,14 @@
           <rect x="78" y="48" width="6" height="6" fill="#87CEEB"/>
           <path d="M0,85 Q25,75 50,85 Q75,95 100,85" fill="#87CEEB"/>
           <path d="M0,88 Q25,78 50,88 Q75,98 100,88" fill="#B0E0E6"/>
-          <ellipse cx="30" y="83" rx="4" ry="2" fill="#4682B4"/>
-          <ellipse cx="70" y="87" rx="3" ry="1.5" fill="#4682B4"/>
-        </svg>` },
-      { id: 'gongliao', name: '貢寮', description: '貢寮靠近東北角海岸，這裡有山海景色和寧靜的聚落氛圍，也很適合安排輕旅行！',
+          <ellipse cx="30" cy="83" rx="4" ry="2" fill="#4682B4"/>
+          <ellipse cx="70" cy="87" rx="3" ry="1.5" fill="#4682B4"/>
+        </svg>`
+      },
+      {
+        id: 'gongliao',
+        name: '貢寮',
+        description: '貢寮靠近東北角海岸，這裡有山海景色和寧靜的聚落氛圍，也很適合安排輕旅行！',
         svg: `<svg viewBox="0 0 100 100" class="w-full h-full">
           <rect x="0" y="60" width="100" height="40" fill="#7dd3fc"/>
           <path d="M0,60 Q25,52 50,60 Q75,68 100,60" fill="#38bdf8"/>
@@ -272,8 +290,12 @@
           <circle cx="78" cy="22" r="10" fill="#facc15"/>
           <circle cx="20" cy="70" r="4" fill="white" opacity="0.9"/>
           <circle cx="30" cy="74" r="3" fill="white" opacity="0.9"/>
-        </svg>` },
-      { id: 'fulong', name: '福隆', description: '福隆有美麗的金色沙灘，每年夏天還會舉辦熱鬧的海洋音樂祭，超級好玩！',
+        </svg>`
+      },
+      {
+        id: 'fulong',
+        name: '福隆',
+        description: '福隆有美麗的金色沙灘，每年夏天還會舉辦熱鬧的海洋音樂祭，超級好玩！',
         svg: `<svg viewBox="0 0 100 100" class="w-full h-full">
           <rect x="0" y="0" width="100" height="50" fill="#87CEEB"/>
           <circle cx="80" cy="25" r="15" fill="#FFD700"/>
@@ -282,11 +304,12 @@
           <rect x="35" y="45" width="3" height="30" fill="#8B4513"/>
           <polygon points="38,30 38,55 55,42" fill="#FF6347"/>
           <ellipse cx="20" cy="75" rx="8" ry="4" fill="#FFE4B5"/>
-          <ellipse cx="75" y="80" rx="6" ry="3" fill="#FFE4B5"/>
+          <ellipse cx="75" cy="80" rx="6" ry="3" fill="#FFE4B5"/>
           <path d="M5,55 Q10,52 15,55 Q20,58 25,55" stroke="#4682B4" stroke-width="2" fill="none"/>
           <path d="M60,52 Q65,49 70,52 Q75,55 80,52" stroke="#4682B4" stroke-width="2" fill="none"/>
           <text x="50" y="90" text-anchor="middle" fill="#8B4513" font-size="8">🎵🎶</text>
-        </svg>` },
+        </svg>`
+      },
       { id: 'yilan', name: '宜蘭', description: '宜蘭是一個充滿童趣的城市，有很多親子景點和有趣的博物館，還有美味的小吃！',
         svg: `<svg viewBox="0 0 100 100" class="w-full h-full">
           <rect x="10" y="40" width="25" height="40" rx="3" fill="#FF6B6B"/>
@@ -341,6 +364,7 @@
         </svg>` },
     ];
 
+    // ✅ 你最新座標
     const stationPositions = {
       songshan:    { left: 71.3921, top: 21.7455 },
       ruifang:     { left: 83.8485, top: 17.3941 },
@@ -371,47 +395,64 @@
       return shuffled;
     }
 
-    function renderStations() {
-      const dotLayer = document.getElementById('stations-container');
-      const labelsLayer = document.getElementById('labels-container');
+    // ✅ 線條重畫：抓「方框實際中心點」來對齊線條
+    function redrawLinksUsingLabelRects() {
       const svg = document.getElementById('links-layer');
+      const mapWrap = document.getElementById('map-wrap');
+      const labels = document.querySelectorAll('#labels-container .label-box');
 
-      dotLayer.innerHTML = '';
-      labelsLayer.innerHTML = '';
-
+      // 清掉舊線但保留 defs
       const defs = svg.querySelector('defs');
       svg.innerHTML = '';
       if (defs) svg.appendChild(defs);
 
-      const n = stationsData.length;
-      const labelAnchorX = 22;
-      const topY = 8;
-      const bottomY = 92;
+      const wrapRect = mapWrap.getBoundingClientRect();
+
+      labels.forEach(label => {
+        const id = label.dataset.stationId;
+        const pos = stationPositions[id];
+        if (!pos) return;
+
+        const labelRect = label.getBoundingClientRect();
+
+        // label 中心點（像素）→ 轉成百分比（0~100）
+        const centerX = labelRect.left + labelRect.width / 2;
+        const centerY = labelRect.top + labelRect.height / 2;
+
+        const x1 = ((centerX - wrapRect.left) / wrapRect.width) * 100;
+        const y1 = ((centerY - wrapRect.top) / wrapRect.height) * 100;
+
+        const x2 = pos.left;
+        const y2 = pos.top;
+
+        // 控制點：稍微彎曲
+        const cx1 = Math.min(100, x1 + 10);
+        const cy1 = y1;
+        const cx2 = Math.max(0, x2 - 10);
+        const cy2 = y2;
+
+        const isMatched = matchedStations.has(id);
+
+        const path = document.createElementNS('http://www.w3.org/2000/svg', 'path');
+        path.setAttribute('d', `M ${x1} ${y1} C ${cx1} ${cy1}, ${cx2} ${cy2}, ${x2} ${y2}`);
+        path.setAttribute('fill', 'none');
+        path.setAttribute('stroke', isMatched ? 'rgba(16,185,129,0.75)' : 'rgba(51,65,85,0.55)');
+        path.setAttribute('stroke-width', '0.45');
+        path.setAttribute('marker-end', 'url(#arrowhead)');
+        svg.appendChild(path);
+      });
+    }
+
+    function renderStations() {
+      const dotLayer = document.getElementById('stations-container');
+      const labelsLayer = document.getElementById('labels-container');
+
+      // ✅ 不產生白點
+      dotLayer.innerHTML = '';
+      labelsLayer.innerHTML = '';
 
       stationsData.forEach((station, index) => {
         const isMatched = matchedStations.has(station.id);
-        const pos = stationPositions[station.id];
-        if (!pos) return;
-
-        const dot = document.createElement('div');
-        dot.className = 'absolute dot-target';
-        dot.dataset.stationId = station.id;
-        dot.style.left = pos.left + '%';
-        dot.style.top = pos.top + '%';
-        dot.style.transform = 'translate(-50%, -50%)';
-
-        dot.title = isMatched ? `點擊查看：${station.name}` : `尚未配對：${station.name}`;
-        dot.addEventListener('click', () => {
-          if (matchedStations.has(station.id)) showStationInfo(station);
-        });
-
-        if (isMatched) {
-          dot.style.background = 'linear-gradient(135deg, #4ade80, #22c55e)';
-          dot.style.border = '2px solid rgba(16,185,129,0.95)';
-        }
-        dotLayer.appendChild(dot);
-
-        const labelY = (n === 1) ? 50 : topY + (index * (bottomY - topY) / (n - 1));
 
         const label = document.createElement('div');
         label.className = 'label-box droppable';
@@ -421,7 +462,7 @@
           <div class="flex items-center gap-2">
             <span class="w-5 text-right">${index + 1}</span>
             <span class="flex-1">${isMatched ? station.name : '（拖到這裡）'}</span>
-            ${isMatched ? '<span>✓</span>' : '<span class="opacity-60">⬅️</span>'}
+            ${isMatched ? '<span>✓</span>' : '<span class="opacity-60">➡️</span>'}
           </div>
         `;
 
@@ -433,28 +474,12 @@
           label.addEventListener('dragleave', handleDragLeaveLabel);
           label.addEventListener('drop', handleDropOnLabel);
         }
+
         labelsLayer.appendChild(label);
-
-        const path = document.createElementNS('http://www.w3.org/2000/svg', 'path');
-
-        const x1 = labelAnchorX;
-        const y1 = labelY;
-        const x2 = pos.left;
-        const y2 = pos.top;
-
-        const cx1 = x1 + 10;
-        const cy1 = y1;
-        const cx2 = x2 - 10;
-        const cy2 = y2;
-
-        const d = `M ${x1} ${y1} C ${cx1} ${cy1}, ${cx2} ${cy2}, ${x2} ${y2}`;
-        path.setAttribute('d', d);
-        path.setAttribute('fill', 'none');
-        path.setAttribute('stroke', isMatched ? 'rgba(16,185,129,0.75)' : 'rgba(51,65,85,0.55)');
-        path.setAttribute('stroke-width', '0.45');
-        path.setAttribute('marker-end', 'url(#arrowhead)');
-        svg.appendChild(path);
       });
+
+      // ✅ 等 DOM 真正排版完成後再畫線，才能精準對齊方框
+      requestAnimationFrame(() => redrawLinksUsingLabelRects());
     }
 
     function renderCards() {
@@ -613,7 +638,7 @@
       document.getElementById('info-content').innerHTML = `
         <div class="text-6xl mb-3">🚉</div>
         <p class="text-lg text-amber-800 font-medium">
-          點擊已配對的方框或白點<br>來看看當地的特色吧！
+          點擊已配對的方框<br>來看看當地的特色吧！
         </p>
       `;
     }
@@ -642,10 +667,20 @@
 
     const mapImg = document.getElementById('rail-map');
     if (mapImg && !mapImg.complete) {
-      mapImg.addEventListener('load', resetGame, { once: true });
+      mapImg.addEventListener('load', () => {
+        resetGame();
+        // 影像載入後再次對齊（避免第一次計算誤差）
+        requestAnimationFrame(() => redrawLinksUsingLabelRects());
+      }, { once: true });
     } else {
       resetGame();
+      requestAnimationFrame(() => redrawLinksUsingLabelRects());
     }
+
+    // ✅ 視窗尺寸改變時重新對齊線條
+    window.addEventListener('resize', () => {
+      requestAnimationFrame(() => redrawLinksUsingLabelRects());
+    });
   </script>
 </body>
 </html>
