--- a/taiwan.html
+++ b/taiwan.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&display=swap" rel="stylesheet">
 
   <style>
+    html, body { height: 100%; }
     body { box-sizing: border-box; font-family: 'Noto Sans TC', sans-serif; }
 
     .station-card { cursor: grab; transition: all 0.2s ease; user-select: none; }
@@ -63,6 +64,39 @@
       transform: translateY(-1px);
       box-shadow: 0 10px 22px rgba(34, 197, 94, 0.22);
     }
+
+    /* ✅ 教材版：讓整個畫面可「鎖在一頁」 */
+    #app {
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+    }
+    .main-content {
+      flex: 1;
+      min-height: 0;
+    }
+
+    /* ✅ iPad 11 吋（橫向）一頁顯示最佳化 */
+    @media (min-width: 768px) and (max-width: 1200px) and (orientation: landscape) {
+      body { overflow: hidden; }                 /* 整頁不捲動 */
+      #app { padding: 8px !important; }         /* 外距縮小 */
+      header { margin-bottom: 6px !important; } /* header 更緊湊 */
+
+      #game-title { font-size: 22px !important; line-height: 1.2; }
+      #instruction-text { font-size: 13px !important; }
+
+      /* 地圖容器固定高度，圖片用 contain 確保完整顯示 */
+      #map-wrap { height: 72vh; } /* 依 iPad 橫向高度，保證放得下右側面板 */
+      #rail-map {
+        width: 100% !important;
+        height: 100% !important;
+        object-fit: contain !important;  /* ✅ 地圖完整顯示 */
+      }
+
+      /* 右側兩張卡片高度縮小一些 */
+      .panel-tight { padding: 10px !important; }
+      #info-panel { min-height: 210px !important; }
+    }
   </style>
 </head>
 
@@ -74,10 +108,10 @@
       <p id="instruction-text" class="text-gray-600 text-sm md:text-base">把右邊的車站名稱拖到左邊正確的方框吧！</p>
     </header>
 
-    <div class="flex flex-col lg:flex-row gap-4 max-w-7xl mx-auto">
+    <div class="flex flex-col lg:flex-row gap-4 max-w-7xl mx-auto main-content">
 
       <!-- Left: Map -->
-      <div class="lg:w-2/3 bg-white rounded-3xl shadow-xl p-4">
+      <div class="lg:w-2/3 bg-white rounded-3xl shadow-xl p-4 panel-tight">
         <div class="flex items-center justify-center mb-3">
           <span class="text-lg font-bold text-slate-700">🗺️ 北迴線鐵路地圖</span>
         </div>
@@ -103,7 +137,7 @@
             </defs>
           </svg>
 
-          <!-- ✅ 不再放白點（這層保留但會是空的） -->
+          <!-- ✅ 不顯示白點 -->
           <div id="stations-container" class="absolute inset-0 pointer-events-none"></div>
 
           <!-- 左側方框 -->
@@ -120,7 +154,7 @@
       <!-- Right Panel -->
       <div class="lg:w-1/3 flex flex-col gap-4">
 
-        <div class="bg-white rounded-3xl shadow-xl p-4">
+        <div class="bg-white rounded-3xl shadow-xl p-4 panel-tight">
           <div class="flex items-center justify-between mb-3">
             <span class="text-lg font-bold text-orange-600">🎴 車站卡片</span>
             <button id="reset-btn"
@@ -139,7 +173,7 @@
           <p id="progress-text" class="text-center text-sm text-gray-500 mt-1">配對進度：0 / 11</p>
         </div>
 
-        <div id="info-panel" class="info-panel rounded-3xl shadow-xl p-4 min-h-[280px] flex flex-col items-center justify-center">
+        <div id="info-panel" class="info-panel rounded-3xl shadow-xl p-4 panel-tight min-h-[280px] flex flex-col items-center justify-center">
           <div id="info-content" class="text-center">
             <div class="text-6xl mb-3">🚉</div>
             <p class="text-lg text-amber-800 font-medium">
@@ -159,10 +193,7 @@
     };
 
     const stationsData = [
-      {
-        id: 'songshan',
-        name: '松山',
-        description: '松山是台北重要的交通樞紐，這裡有熱鬧的饒河夜市，可以吃到各種美味的小吃喔！',
+      { id: 'songshan', name: '松山', description: '松山是台北重要的交通樞紐，這裡有熱鬧的饒河夜市，可以吃到各種美味的小吃喔！',
         svg: `<svg viewBox="0 0 100 100" class="w-full h-full">
           <rect x="10" y="40" width="80" height="50" rx="5" fill="#FF6B6B"/>
           <rect x="15" y="45" width="15" height="20" rx="2" fill="#FFE66D"/>
@@ -174,12 +205,8 @@
           <text x="25" y="29" text-anchor="middle" fill="#FF6B6B" font-size="12">🍜</text>
           <circle cx="75" cy="25" r="12" fill="#6BCB77"/>
           <text x="75" y="29" text-anchor="middle" fill="white" font-size="12">🚃</text>
-        </svg>`
-      },
-      {
-        id: 'ruifang',
-        name: '瑞芳',
-        description: '瑞芳是通往九份山城的門戶，這裡曾經是採金礦的地方，有著豐富的礦業文化！',
+        </svg>` },
+      { id: 'ruifang', name: '瑞芳', description: '瑞芳是通往九份山城的門戶，這裡曾經是採金礦的地方，有著豐富的礦業文化！',
         svg: `<svg viewBox="0 0 100 100" class="w-full h-full">
           <polygon points="50,10 20,50 80,50" fill="#8B7355"/>
           <polygon points="50,25 30,50 70,50" fill="#A0522D"/>
@@ -191,12 +218,8 @@
           <rect x="30" y="80" width="40" height="8" rx="2" fill="#696969"/>
           <circle cx="38" cy="88" r="4" fill="#333"/>
           <circle cx="62" cy="88" r="4" fill="#333"/>
-        </svg>`
-      },
-      {
-        id: 'houtong',
-        name: '猴硐',
-        description: '猴硐是著名的貓村，有好多可愛的貓咪在車站附近散步，是貓咪愛好者的天堂！',
+        </svg>` },
+      { id: 'houtong', name: '猴硐', description: '猴硐是著名的貓村，有好多可愛的貓咪在車站附近散步，是貓咪愛好者的天堂！',
         svg: `<svg viewBox="0 0 100 100" class="w-full h-full">
           <ellipse cx="50" cy="65" rx="30" ry="25" fill="#FFA07A"/>
           <ellipse cx="50" cy="45" rx="20" ry="18" fill="#FFA07A"/>
@@ -217,12 +240,8 @@
           <ellipse cx="35" cy="70" rx="8" ry="6" fill="#FFA07A"/>
           <ellipse cx="65" cy="70" rx="8" ry="6" fill="#FFA07A"/>
           <path d="M75,65 Q85,55 80,75" stroke="#FFA07A" stroke-width="8" fill="none" stroke-linecap="round"/>
-        </svg>`
-      },
-      {
-        id: 'sandiaoling',
-        name: '三貂嶺',
-        description: '三貂嶺是一個秘境車站，附近有美麗的瀑布和原始的自然風光，是探險的好地方！',
+        </svg>` },
+      { id: 'sandiaoling', name: '三貂嶺', description: '三貂嶺是一個秘境車站，附近有美麗的瀑布和原始的自然風光，是探險的好地方！',
         svg: `<svg viewBox="0 0 100 100" class="w-full h-full">
           <polygon points="20,90 35,40 50,90" fill="#228B22"/>
           <polygon points="50,90 65,30 80,90" fill="#2E8B57"/>
@@ -233,12 +252,8 @@
           <circle cx="20" cy="25" r="6" fill="white" opacity="0.8"/>
           <circle cx="28" cy="22" r="4" fill="white" opacity="0.8"/>
           <circle cx="15" cy="20" r="3" fill="white" opacity="0.8"/>
-        </svg>`
-      },
-      {
-        id: 'mudan',
-        name: '牡丹',
-        description: '牡丹是一個寧靜純樸的鄉村小站，周圍有美麗的田園風光和盛開的花朵！',
+        </svg>` },
+      { id: 'mudan', name: '牡丹', description: '牡丹是一個寧靜純樸的鄉村小站，周圍有美麗的田園風光和盛開的花朵！',
         svg: `<svg viewBox="0 0 100 100" class="w-full h-full">
           <rect x="0" y="60" width="100" height="40" fill="#90EE90"/>
           <rect x="0" y="70" width="100" height="30" fill="#7CFC00"/>
@@ -257,12 +272,8 @@
           <ellipse cx="25" cy="75" rx="8" ry="3" fill="#32CD32"/>
           <ellipse cx="55" cy="78" rx="6" ry="2" fill="#32CD32"/>
           <circle cx="85" cy="20" r="12" fill="#FFD700"/>
-        </svg>`
-      },
-      {
-        id: 'shuangxi',
-        name: '雙溪',
-        description: '雙溪有古老的房屋和清澈的溪流，走在老街上可以感受到濃濃的懷舊氣息！',
+        </svg>` },
+      { id: 'shuangxi', name: '雙溪', description: '雙溪有古老的房屋和清澈的溪流，走在老街上可以感受到濃濃的懷舊氣息！',
         svg: `<svg viewBox="0 0 100 100" class="w-full h-full">
           <rect x="15" y="35" width="35" height="35" fill="#8B4513"/>
           <polygon points="15,35 32,15 50,35" fill="#A0522D"/>
@@ -276,12 +287,8 @@
           <path d="M0,88 Q25,78 50,88 Q75,98 100,88" fill="#B0E0E6"/>
           <ellipse cx="30" cy="83" rx="4" ry="2" fill="#4682B4"/>
           <ellipse cx="70" cy="87" rx="3" ry="1.5" fill="#4682B4"/>
-        </svg>`
-      },
-      {
-        id: 'gongliao',
-        name: '貢寮',
-        description: '貢寮靠近東北角海岸，這裡有山海景色和寧靜的聚落氛圍，也很適合安排輕旅行！',
+        </svg>` },
+      { id: 'gongliao', name: '貢寮', description: '貢寮靠近東北角海岸，這裡有山海景色和寧靜的聚落氛圍，也很適合安排輕旅行！',
         svg: `<svg viewBox="0 0 100 100" class="w-full h-full">
           <rect x="0" y="60" width="100" height="40" fill="#7dd3fc"/>
           <path d="M0,60 Q25,52 50,60 Q75,68 100,60" fill="#38bdf8"/>
@@ -290,12 +297,8 @@
           <circle cx="78" cy="22" r="10" fill="#facc15"/>
           <circle cx="20" cy="70" r="4" fill="white" opacity="0.9"/>
           <circle cx="30" cy="74" r="3" fill="white" opacity="0.9"/>
-        </svg>`
-      },
-      {
-        id: 'fulong',
-        name: '福隆',
-        description: '福隆有美麗的金色沙灘，每年夏天還會舉辦熱鬧的海洋音樂祭，超級好玩！',
+        </svg>` },
+      { id: 'fulong', name: '福隆', description: '福隆有美麗的金色沙灘，每年夏天還會舉辦熱鬧的海洋音樂祭，超級好玩！',
         svg: `<svg viewBox="0 0 100 100" class="w-full h-full">
           <rect x="0" y="0" width="100" height="50" fill="#87CEEB"/>
           <circle cx="80" cy="25" r="15" fill="#FFD700"/>
@@ -308,8 +311,7 @@
           <path d="M5,55 Q10,52 15,55 Q20,58 25,55" stroke="#4682B4" stroke-width="2" fill="none"/>
           <path d="M60,52 Q65,49 70,52 Q75,55 80,52" stroke="#4682B4" stroke-width="2" fill="none"/>
           <text x="50" y="90" text-anchor="middle" fill="#8B4513" font-size="8">🎵🎶</text>
-        </svg>`
-      },
+        </svg>` },
       { id: 'yilan', name: '宜蘭', description: '宜蘭是一個充滿童趣的城市，有很多親子景點和有趣的博物館，還有美味的小吃！',
         svg: `<svg viewBox="0 0 100 100" class="w-full h-full">
           <rect x="10" y="40" width="25" height="40" rx="3" fill="#FF6B6B"/>
@@ -364,7 +366,6 @@
         </svg>` },
     ];
 
-    // ✅ 你最新座標
     const stationPositions = {
       songshan:    { left: 71.3921, top: 21.7455 },
       ruifang:     { left: 83.8485, top: 17.3941 },
@@ -401,7 +402,6 @@
       const mapWrap = document.getElementById('map-wrap');
       const labels = document.querySelectorAll('#labels-container .label-box');
 
-      // 清掉舊線但保留 defs
       const defs = svg.querySelector('defs');
       svg.innerHTML = '';
       if (defs) svg.appendChild(defs);
@@ -415,7 +415,6 @@
 
         const labelRect = label.getBoundingClientRect();
 
-        // label 中心點（像素）→ 轉成百分比（0~100）
         const centerX = labelRect.left + labelRect.width / 2;
         const centerY = labelRect.top + labelRect.height / 2;
 
@@ -425,7 +424,6 @@
         const x2 = pos.left;
         const y2 = pos.top;
 
-        // 控制點：稍微彎曲
         const cx1 = Math.min(100, x1 + 10);
         const cy1 = y1;
         const cx2 = Math.max(0, x2 - 10);
@@ -447,8 +445,7 @@
       const dotLayer = document.getElementById('stations-container');
       const labelsLayer = document.getElementById('labels-container');
 
-      // ✅ 不產生白點
-      dotLayer.innerHTML = '';
+      dotLayer.innerHTML = ''; // ✅ 不顯示白點
       labelsLayer.innerHTML = '';
 
       stationsData.forEach((station, index) => {
@@ -478,7 +475,6 @@
         labelsLayer.appendChild(label);
       });
 
-      // ✅ 等 DOM 真正排版完成後再畫線，才能精準對齊方框
       requestAnimationFrame(() => redrawLinksUsingLabelRects());
     }
 
@@ -669,7 +665,6 @@
     if (mapImg && !mapImg.complete) {
       mapImg.addEventListener('load', () => {
         resetGame();
-        // 影像載入後再次對齊（避免第一次計算誤差）
         requestAnimationFrame(() => redrawLinksUsingLabelRects());
       }, { once: true });
     } else {
@@ -677,7 +672,6 @@
       requestAnimationFrame(() => redrawLinksUsingLabelRects());
     }
 
-    // ✅ 視窗尺寸改變時重新對齊線條
     window.addEventListener('resize', () => {
       requestAnimationFrame(() => redrawLinksUsingLabelRects());
     });
