--- a/taiwan.html
+++ b/taiwan.html
@@ -65,7 +65,7 @@
       box-shadow: 0 10px 22px rgba(34, 197, 94, 0.22);
     }
 
-    /* ✅ 教材版：讓整個畫面可「鎖在一頁」 */
+    /* ✅ 全頁一屏 */
     #app {
       min-height: 100vh;
       display: flex;
@@ -76,26 +76,29 @@
       min-height: 0;
     }
 
-    /* ✅ iPad 11 吋（橫向）一頁顯示最佳化 */
+    /* ✅ iPad 橫向一頁顯示（鎖定） */
     @media (min-width: 768px) and (max-width: 1200px) and (orientation: landscape) {
-      body { overflow: hidden; }                 /* 整頁不捲動 */
-      #app { padding: 8px !important; }         /* 外距縮小 */
-      header { margin-bottom: 6px !important; } /* header 更緊湊 */
+      body { overflow: hidden; }         /* 不捲動 */
+      #app { padding: 8px !important; }  /* 外距縮小 */
 
-      #game-title { font-size: 22px !important; line-height: 1.2; }
+      header { margin-bottom: 6px !important; }
+      #game-title { font-size: 22px !important; line-height: 1.2; margin-bottom: 4px !important; }
       #instruction-text { font-size: 13px !important; }
 
-      /* 地圖容器固定高度，圖片用 contain 確保完整顯示 */
-      #map-wrap { height: 72vh; } /* 依 iPad 橫向高度，保證放得下右側面板 */
+      /* 左右卡片 padding 更緊 */
+      .panel-tight { padding: 10px !important; }
+
+      /* 地圖高度：固定，確保完整顯示 */
+      #map-wrap { height: 72vh; }
       #rail-map {
         width: 100% !important;
         height: 100% !important;
-        object-fit: contain !important;  /* ✅ 地圖完整顯示 */
+        object-fit: contain !important; /* ✅ 全圖完整顯示 */
       }
 
-      /* 右側兩張卡片高度縮小一些 */
-      .panel-tight { padding: 10px !important; }
+      /* 右側 info 面板不要太高 */
       #info-panel { min-height: 210px !important; }
+      #cards-container { min-height: 96px !important; }
     }
   </style>
 </head>
@@ -269,7 +272,7 @@
           <line x1="30" y1="55" x2="30" y2="75" stroke="#228B22" stroke-width="3"/>
           <line x1="70" y1="47" x2="70" y2="70" stroke="#228B22" stroke-width="3"/>
           <line x1="50" y1="60" x2="50" y2="78" stroke="#228B22" stroke-width="3"/>
-          <ellipse cx="25" cy="75" rx="8" ry="3" fill="#32CD32"/>
+          <ellipse cx="25" y="75" rx="8" ry="3" fill="#32CD32"/>
           <ellipse cx="55" cy="78" rx="6" ry="2" fill="#32CD32"/>
           <circle cx="85" cy="20" r="12" fill="#FFD700"/>
         </svg>` },
@@ -384,7 +387,6 @@
     let currentCards = [];
     let draggedCard = null;
 
-    // touch
     let clonedCard = null;
 
     function shuffleArray(array) {
@@ -396,7 +398,6 @@
       return shuffled;
     }
 
-    // ✅ 線條重畫：抓「方框實際中心點」來對齊線條
     function redrawLinksUsingLabelRects() {
       const svg = document.getElementById('links-layer');
       const mapWrap = document.getElementById('map-wrap');
@@ -414,7 +415,6 @@
         if (!pos) return;
 
         const labelRect = label.getBoundingClientRect();
-
         const centerX = labelRect.left + labelRect.width / 2;
         const centerY = labelRect.top + labelRect.height / 2;
 
@@ -442,10 +442,9 @@
     }
 
     function renderStations() {
-      const dotLayer = document.getElementById('stations-container');
-      const labelsLayer = document.getElementById('labels-container');
+      document.getElementById('stations-container').innerHTML = ''; // 不顯示白點
 
-      dotLayer.innerHTML = ''; // ✅ 不顯示白點
+      const labelsLayer = document.getElementById('labels-container');
       labelsLayer.innerHTML = '';
 
       stationsData.forEach((station, index) => {
@@ -530,10 +529,8 @@
     function handleDropOnLabel(e) {
       e.preventDefault();
       e.currentTarget.classList.remove('drag-over');
-
       const cardId = e.dataTransfer.getData('text/plain');
       const targetId = e.currentTarget.dataset.stationId;
-
       if (cardId === targetId) matchStation(cardId);
     }
 
